--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -1,32 +1,72 @@
-.label_settings {
-  border: 1px solid #ccc;
-  background-color: rgb(240, 240, 240);
-  border-radius: 0.5vh;
-  padding: 3px;
-  margin-left: 5px;
-  cursor: pointer;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-.settings-list-item {
+.Chat {
+  background-color: #222831;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+header {
+  color: #eeeeee;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 5px solid #393e46;
 }
-.infos {
-  padding: 10px;
-  font-size: x-large;
-  text-align: center;
-  color: tomato;
-}
-.connected {
-  padding: 10px;
-  font-size: x-large;
-  text-align: center;
-  color: springgreen;
-}
-.beta {
-  margin: 30px;
-  color: steelblue;
+main {
+  background-color: #eeeeee;
+  flex-grow: 1;
+  display: flex;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
 }
 
-button:disabled,
-button[disabled] {
-  background-color: rgb(133, 133, 133);
+aside {
+  display: flex;
+  flex-direction: column;
+  background-color: #00adb5;
+  width: 200px;
+  border-right: 2px dotted #393e46;
+  padding: 10px;
+
+  button {
+    margin-bottom: 5px;
+    border: 1px solid #393e46;
+    padding: 3px;
+    cursor: pointer;
+  }
+
+  input {
+    border: 1px solid #393e46;
+    padding: 3px;
+  }
+}
+
+footer {
+  background-color: #393e46;
+
+  input {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 3rem;
+    border: 2px solid #00adb5;
+    width: 98%;
+    background-color: #eeeeee;
+  }
+}
+
+.messages {
+  padding: 5px;
+  overflow-y: scroll;
+  height: 50vh;
+}
+.autoWelcome {
+  margin-top: 10px;
 }
